Ensure anchors are visible in dark mode

--- a/app/assets/stylesheets/text.css
+++ b/app/assets/stylesheets/text.css
@@ -75,6 +75,10 @@
       --opacity: 0.5;
     }
   }
+
+  @media (prefers-color-scheme: dark) {
+    filter: invert(1);
+  }
 }
 
 hr {
